syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Proto.DTO.TimerSettings";

message WorkDayProto {
  string workDayId = 1;
  google.protobuf.Timestamp date = 2;
}